@@ -524,7 +524,7 @@ sub provisionDC
     my ($self, $provisionIP) = @_;
 
     my $usersModule = EBox::Global->modInstance('samba');
-
+    my $passwdFile;
     try {
         $usersModule->writeSambaConfig();
 
@@ -548,7 +548,8 @@ sub provisionDC
             last if ($pass =~ /[a-z]+/ and $pass =~ /[A-Z]+/ and
                      $pass =~ /[0-9]+/ and length ($pass) >=8);
         }
-        $cmd .= " --adminpass='$pass'";
+        $passwdFile = $self->_createTmpPasswdFile($pass);
+        $cmd .= " --adminpass=`cat $passwdFile`";
 
         # Use silent root to avoid showing the admin pass in the logs if
         # provision command fails.
@@ -564,15 +565,20 @@ sub provisionDC
             throw EBox::Exceptions::Internal("Error provisioning database. " .
                     "Output: @{$output}, error:@error");
         }
+        unlink $passwdFile;
+
         $self->setProvisioned(1);
         $self->setupKerberos();
         $self->setupDNS();
     } catch ($e) {
+        if ($passwdFile) {
+            unlink $passwdFile
+        }
         $self->setProvisioned(0);
         $self->setupKerberos();
         $self->setupDNS();
         $e->throw();
-    }
+    } 
 
     try {
         # Disable password policy
@@ -1320,6 +1326,7 @@ sub provisionADC
 
     my $dnsFile = undef;
     my $adminAccountPwdFile = undef;
+    my $passwdFile;
     try {
         EBox::info("Joining to domain '$domainToJoin' as DC");
         # Set the domain DNS as the primary resolver. This will also let to get
@@ -1344,10 +1351,11 @@ sub provisionADC
 
         # Join the domain
         EBox::info("Executing domain join");
+        $passwdFile = $self->_createTmpPasswdFile($adPwd);
         my $cmd2 = "samba-tool domain join $domainToJoin DC " .
                    " --username='$adUser' " .
                    " --workgroup='$netbiosDomain' " .
-                   " --password='$adPwd' " .
+                   " --password=`cat $passwdFile` " .
                    " --server='$adServerIp' " .
                    " --dns-backend=BIND9_DLZ " .
                    " --realm='$realm' " .
@@ -1364,6 +1372,7 @@ sub provisionADC
             }
             throw EBox::Exceptions::External("Error joining to domain: @error");
         }
+        unlink $passwdFile;
 
         $self->setProvisioned(1);
         $self->setupKerberos();
@@ -1407,6 +1416,9 @@ sub provisionADC
             $mod->setAsChanged();
         }
     } catch ($e) {
+        if ($passwdFile) {
+            unlink $passwdFile;
+        }
         $self->setProvisioned(0);
         $self->setupKerberos();
         $self->setupDNS();
@@ -1509,6 +1521,15 @@ sub _hideInternalUsers
     if ($user->exists()) {
         $user->setCritical(1);
     }
+}
+
+sub _createTmpPasswdFile
+{
+    my ($self, $pass) = @_;
+    my ($FH, $passwdFile) = tempfile(EBox::Config::tmp() . 'XXXXXX', CLEANUP => 1);
+    (print $FH $pass) or die "Error closing temporal password file $!";
+    close($FH) or die "Error closing temporal password file $!";
+    return $passwdFile;
 }
 
 1;
