@@ -1,3 +1,5 @@
+HEAD
+	+ Do not show administrator password in provision command
 4.0
 	+ Re-enable user synchronization with Zentyal Cloud
 	+ Proper notifications when a share is sync'ed with Zentyal Cloud
